--- a/1-ec2-instance-r53.yaml
+++ b/1-ec2-instance-r53.yaml
@@ -7,6 +7,7 @@
     sg_id : sg-088654339372a0863
     zone_id : Z013386211R3NLCB52I8R
     domain_name : arunenjali.fun
+    region: us-east-1 
     instances :
     - mongodb
 
@@ -17,6 +18,7 @@
       instance_type : t3.micro
       security_group : "{{sg_id}}"
       image_id : "{{ami_id}}"
+      region: "{{region}}" 
       tags :
         name : "{{item}}"
     loop : "{{instances}}"
