--- a/1-ec2-instance-r53.yaml
+++ b/1-ec2-instance-r53.yaml
@@ -25,3 +25,13 @@
   - name : printing the ec2_instance output
     ansible.builtin.debug :
       msg : "{{ec2_output}}"
+
+  - name : printing the public ip address
+    ansible.builtin.debug :
+      msg : "{{item.instances[0].public_ip_address}}"
+    loop : "{{ec2_output.results}}"
+
+  - name : printing the private ip address
+    ansible.builtin.debug :
+      msg : "{{item.instances[0].private_ip_address}}"
+    loop : "{{ec2_output.results}}"
