--- a/1-ec2-instance-r53.yaml
+++ b/1-ec2-instance-r53.yaml
@@ -22,9 +22,9 @@
     loop : "{{instances}}"
     register : ec2_output
   
-  - name : printing the ec2_instance output
-    ansible.builtin.debug :
-      msg : "{{ec2_output}}"
+  # - name : printing the ec2_instance output
+  #   ansible.builtin.debug :
+  #     msg : "{{ec2_output}}"
 
   - name : printing the public ip address
     ansible.builtin.debug :
