--- a/1-ec2-instance-r53.yaml
+++ b/1-ec2-instance-r53.yaml
@@ -26,12 +26,24 @@
   #   ansible.builtin.debug :
   #     msg : "{{ec2_output}}"
 
-  - name : printing the public ip address
-    ansible.builtin.debug :
-      msg : "{{item.instances[0].public_ip_address}}"
-    loop : "{{ec2_output.results}}"
+  # - name : printing the public ip address
+  #   ansible.builtin.debug :
+  #     msg : "{{item.instances[0].public_ip_address}}"
+  #   loop : "{{ec2_output.results}}"
 
-  - name : printing the private ip address
-    ansible.builtin.debug :
-      msg : "{{item.instances[0].private_ip_address}}"
-    loop : "{{ec2_output.results}}"
+  # - name : printing the private ip address
+  #   ansible.builtin.debug :
+  #     msg : "{{item.instances[0].private_ip_address}}"
+  #   loop : "{{ec2_output.results}}"
+
+  - name: Adding the R53 record
+  amazon.aws.route53:
+    state: present
+    zone: "{{domain_name}}"
+    record: "{{item.item}}.{{domain_name}}"
+    type: A
+    ttl: 1
+    value: "{{item.instances[0].private_ip_address}}"
+    overwrite : true
+  loop : "{{ec2_output.results}}"
+  
